# open-source-rez-packages

./: .gitignore  README.md
AL_USDMaya/0.25.0/: CMakeLists.txt  clean.sh  package.py  setup.sh
AL_USDMaya/0.26.0/: CMakeLists.txt  clean.sh  package.py  setup.sh
AL_USDMaya/0.26.0.001/: CMakeLists.txt  package.py  setup.sh
AL_USDMaya/0.26.0.002/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
AL_USDMaya/0.27.10/: clean.sh  package.py  version.sh
AL_USDMaya/0.27.4/: package.py  version.sh
AL_USDMaya/0.27.8/: package.py  version.sh
AL_USDMaya/0.28.1/: CMakeLists.txt  package.py  version.sh
AL_USDMaya/0.28.3/: package.py  version.sh
AL_USDMaya/0.28.4/: CMakeLists.txt  package.py  readme.md  version.sh
AL_USDMaya/0.29.4/: CMakeLists.txt  package.py  setup.sh  version.sh
Imath/3.1.9/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
KatanaUsdPlugins/19.11.2/: package.py  version.sh
KatanaUsdPlugins/19.11.3/: package.py  setup.sh  version.sh
KatanaUsdPlugins/19.11.4/: package.py  version.sh
KatanaUsdPlugins/19.11.5/: CMakeLists.txt  clean.sh  package.py  setup.sh
KatanaUsdPlugins/19.11.9/: CMakeLists.txt  package.py  setup.sh  version.sh
KatanaUsdPlugins/19.11.9/patch/: FindUSD.cmake  SetupInterfaces.cmake  Support.cmake  compilePython.py
KatanaUsdPlugins/21.05.3.3/: CMakeLists.txt  clean.sh  package.py  rez-build.sh  rez-release.sh  setup.sh  version.sh
KatanaUsdPlugins/21.05.3.3/patch/: SetupInterfaces.cmake
SIBR_viewers/0.9.6/: CMakeLists.txt  package.py  setup.sh
SuiteSparse/4.5.6/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
SuiteSparse/6.0.3/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
aces_container/1.0.2/: _rezbuild_.sh  build.sh  package.py  setup.sh
alembic/1.5.8/: CMakeLists.txt  clean.sh  package.py  readme.md  setup.sh
alembic/1.7.10/: CMakeLists.txt  clean.sh  package.py  setup.sh
alembic/1.7.10/patch/: AlembicBoost.cmake  CMakeLists_PyAlembic.txt  CMakeLists_PyAlembic_Tests.txt  CMakeLists_lib_Alembic.txt  FindIlmBase.cmake
alembic/1.8.6/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
alembic/1.8.6/patch/: CMakeLists.txt
assimp/5.4.3/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
bison/3.8.2/: build.sh  clean.sh  package.py  setup.sh
blender/3.6/: CMakeLists.txt  build.sh  clean.sh  package.py  rez-build.sh  setup.sh  version.sh
blosc/1.17.0/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
boost/1.55.0/: build.sh  clean.sh  package.py  setup.sh
boost/1.61.0/: build.sh  package.py  readme.md  setup.sh
boost/1.66.0/: build.sh  clean.sh  package.py  setup.sh
boost/1.67.0/: build.sh  package.py  setup.sh
boost/1.70.0/: _build_.sh  build.sh  clean.sh  package.py  readme.md  setup.sh
boost/1.72.0/: build.sh  build_python3.10.sh  build_python3.7.sh  build_python3.9.sh  clean.sh  package.py  rez-build.sh  setup.sh
boost/1.76.0/: build.sh  build_python3.sh  clean.sh  package.py  rez-build.sh  setup.sh
boost/1.80.0/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh
boost/1.82.0/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh
brotli/1.1.0/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh  version.sh
carbon/9.2.5/: CMakeLists.txt  package.py
ceres_solver/2.2.0/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
cgal/6.0.1/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
clew/0.4.3/: package.py
cmake/3.28.3/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh
colmap/3.11.1/: CMakeLists.txt  clean.sh  package.py  rez-build.sh  setup.sh  version.sh
colmap/3.11.1/patch/: CMakeLists_colmap.txt  FindDependencies.cmake  FindFLANN.cmake  FindGlew.cmake
cppzmq/4.3.0/: CMakeLists.txt  clean.sh  package.py  setup.sh
dcmtk/3.6.9/: _rezbuild_.sh  build.sh  package.py  setup.sh
eigen/3.3.9/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
embree_lib/3.8.0/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh  version.sh
enblend/4.2/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
exiftool/12.85/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
exiv2/0.26.0/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
exiv2/0.28.2/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
ffmpeg/3.3.5/: build.sh  clean.sh  package.py  readme.md  setup.sh
ffmpeg/4.3.1/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh
ffmpeg/6.0.0/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh
fftw/3.3.10/: _rezbuild_.sh  _rezbuild_float.sh  build.sh  clean.sh  package.py  package_float.py  setup.sh  version.sh
flann/1.9.3/: CMakeLists.txt  clean.sh  package.py  setup.sh
flex/2.6.4/: build.sh  clean.sh  package.py  setup.sh
freetype/2.11/: build.sh  clean.sh  package.py  rez-build.sh  setup.sh  version.sh
gflags/2.2.2/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
gklib/5.2.2/: CMakeLists.txt  clean.sh  package.py  setup.sh
glew/2.0.0/: build.sh  clean.sh  package.py  readme.md  setup.sh
glibc/2.32/: build.sh  clean.sh  package.py  setup.sh
glibc/2.33/: build.sh  clean.sh  package.py  setup.sh
glibc/2.34/: build.sh  clean.sh  package.py  setup.sh
glog/0.4.0/: _rezbuild_.sh  build.sh  clean.sh  package.py  setup.sh
gmp/6.1.2/: _rezbuild_.sh  build.sh  clean.sh  (+2 more)
googletest/1.8.0/: CMakeLists.txt  clean.sh  package.py  rez-release.sh  setup.sh  version.sh
materialx/1.36.0/: CMakeLists.txt  clean.sh  package.py  rez-release.sh  setup.sh
nuke_ML_server/0.1.2/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
ocio/2.0.1/: CMakeLists.txt  clean.sh  package.py  setup.sh  version.sh
usd/0.8.4/: CMakeLists.txt  clean.sh  package.py  readme.md  setup.sh
usd/18.09/: CMakeLists.txt  package.py
usd/18.09/patch/: CMakeLists.txt
usd/21.05/patch/: CMakeLists.txt  FindTBB.cmake  Options.cmake
usd_maya/18.09/: CMakeLists.txt  package.py  setup.sh
usd_maya/18.09/patch/: CMakeLists_katana.txt  CMakeLists_maya.txt  CMakeLists_root.txt  Options.cmake  __init__.py  maya_plugin_lib_cmakelists.txt
(+706 files in other folders)
